asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__push__open_push_menu_after_dash_input.snap
---
source: asyncgit/src/lib/gitui/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit.                             |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                            Arguments                                       |
p pushRemote, setting that      -n Dry run (--dry-run)                          |
u to origin/main                -F Force (--force)                              |
e to elsewhere                  -f Force with lease (--force-with-lease)        |
q Quit/Close                    -h Disable hooks (--no-verify)                  |
styles_hash: b515a17ba4a653aa
