asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__push__push_elsewhere.snap
---
source: src/gitui/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push origin                                                               |
Everything up-to-date                                                           |
styles_hash: baa329f6340fcc8b
