asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__push__push_menu_existing_push_remote_and_upstream.snap
---
source: asyncgit/src/lib/gitui/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Push                  Arguments                                                 |
p to origin           -n Dry run (--dry-run)                                    |
u to origin/main      -F Force (--force)                                        |
e to elsewhere        -f Force with lease (--force-with-lease)                  |
q Quit/Close          -h Disable hooks (--no-verify)                            |
styles_hash: 5b86e47220b822e6
