asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__push__push_push_remote_prompt.snap
---
source: src/gitui/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit.                             |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set pushRemote then push: ›                                                   |
styles_hash: 3978d3bb613672e
